vsftpd.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nas-it-local-dep
  namespace: it
  labels:
    app: nas-it-local
spec:
  serviceName: nas-it-local-vsftpd
  revisionHistoryLimit: 10
  replicas: 1
  selector:
    matchLabels:
      app: nas-it-local
  template:
    metadata:
      labels:
        app: nas-it-local
    spec:
      hostNetwork: true
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - k8s01
      containers:
      - name: vsftp
        image: fauria/vsftpd
        ports:
        - containerPort: 20
        - containerPort: 21
        resources:
          requests:
            memory: "128Mi"
            cpu: "125m"
          limits:
            memory: "512Mi"
            cpu: "250m"
        volumeMounts:
        - name: nas-it-local-vol
          subPath: nas.it.local/data
          mountPath: /home/vsftpd
        - name: nas-it-local-vc
          subPath: vsftpd.conf
          mountPath: /etc/vsftpd/vsftpd.conf
          readOnly: true
        - name: nas-it-local-vc
          subPath: virtual_users.txt
          mountPath: /etc/vsftpd/virtual_users.txt
          readOnly: true
        - name: nas-it-local-vc
          subPath: admin
          mountPath: /etc/vsftpd/virtual/admin
          readOnly: true
        - name: nas-it-local-vc
          subPath: yuangong
          mountPath: /etc/vsftpd/virtual/yuangong
          readOnly: true
      volumes:
      - name: nas-it-local-vol
        persistentVolumeClaim:
          claimName: nas-it-local-pvc
      - name: nas-it-local-vc
        configMap:
          name: nas-it-local-cm
