ingress-nginx-fcgi.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: doc-it-local-ingress
  namespace: it
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: doc.it.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: doc-it-local-nginx-svc
            port:
              number: 80
---

kind: Service
apiVersion: v1
metadata:
  name: doc-it-local-nginx-svc
  namespace: it
spec:
  selector:
    app: doc-it-local-nginx-pod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: doc-it-local-nginx-svc

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: doc-it-local-nginx-dep
  namespace: it
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doc-it-local-nginx-pod
  template:
    metadata:
      labels:
        app: doc-it-local-nginx-pod
    spec:
      containers:
      - name: doc-it-local-nginx-pod
        image: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "125m"
          limits:
            memory: "512Mi"
            cpu: "250m"
        volumeMounts:
        - name: doc-it-local-vol
          subPath: doc.it.local/data
          mountPath: /app
        - name: doc-it-local-vc
          subPath: nginx.conf
          mountPath: /etc/nginx/nginx.conf
        - name: doc-it-local-vc
          subPath: doc.it.local.conf
          mountPath: /etc/nginx/conf.d/doc.it.local.conf
        - name: doc-it-local-vc
          subPath: fastcgi.conf
          mountPath: /etc/nginx/fastcgi.conf
      volumes:
      - name: doc-it-local-vol
        persistentVolumeClaim:
          claimName: doc-it-local-pvc
      - name: doc-it-local-vc
        configMap:
          name: doc-it-local-cm

---

kind: Service
apiVersion: v1
metadata:
  name: doc-it-local-php-svc
  namespace: it
spec:
  selector:
    app: doc-it-local-php-pod
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
    name: doc-it-local-php-svc

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: doc-it-local-php-dep
  namespace: it
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doc-it-local-php-pod
  template:
    metadata:
      labels:
        app: doc-it-local-php-pod
    spec:
      containers:
      - name: doc-it-local-php-pod
        image: bitnami/php-fpm
        ports:
        - containerPort: 9000
        resources:
          requests:
            memory: "128Mi"
            cpu: "125m"
          limits:
            memory: "512Mi"
            cpu: "250m"
        volumeMounts:
        - name: doc-it-local-vol
          subPath: doc.it.local/data
          mountPath: /app
      volumes:
      - name: doc-it-local-vol
        persistentVolumeClaim:
          claimName: doc-it-local-pvc
